--- a/setup.cfg
+++ b/setup.cfg
@@ -28,7 +28,7 @@ project_urls =
 [options]
 packages = find:
 install_requires =
-    Cython>=0.29.13
+    cython>=0.29.13
     numpy>=1.16.0
 python_requires = >=3.6
 package_dir =
@@ -50,7 +50,7 @@ test =
 where = src
 
 [tool:pytest]
-testpaths = src
+testpaths = src/tests
 
 [coverage:paths]
 source =
