--- a/tox.ini
+++ b/tox.ini
@@ -11,12 +11,9 @@ envlist = py36, py37, py38
 passenv = GITHUB_ACTIONS AZURE_PIPELINES TRAVIS
 deps =
     setuptools_scm[toml]>=3.4
+    numpy
+    pytest
+    cython
 
 commands =
     pytest
-
-[testenv:py37-PyQt5-coverage]
-usedevelop = true
-commands =
-    pytest --cov-report=xml --cov-report html --cov-append
-    codecov
