--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.cpp
+src/PartSegCore_compiled_backend/version.py
 
 # Created by https://www.toptal.com/developers/gitignore/api/pycharm+all,jupyternotebooks,python,code,vim,macos,linux,windows
 # Edit at https://www.toptal.com/developers/gitignore?templates=pycharm+all,jupyternotebooks,python,code,vim,macos,linux,windows
