update repository link

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,7 @@ classifiers =
 keywords = bioimaging
 project_urls =
     Documentation = https://partseg.readthedocs.io/en/stable/
-    Source Code = https://github.com/4DNucleome/PartSeg
+    Source Code = https://github.com/4DNucleome/PartSegCore-compiled-backend
 
 [options]
 packages = find:
