--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -54,22 +54,8 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      - uses: actions/setup-python@v2
-        name: Install Python
-        with:
-          python-version: '3.7'
-
-      - name: Install cibuildwheel
-        run: |
-          python -m pip install cibuildwheel==1.6.3
       - name: Build wheels
-        run: |
-          python -m cibuildwheel --output-dir wheelhouse
-        env:
-          CIBW_BUILD: cp3[6-9]*64
-          CIBW_TEST_EXTRAS: test
-          CIBW_BEFORE_BUILD: pip install numpy cython
-          CIBW_TEST_COMMAND: pytest {project}/src/tests
+        uses: pypa/cibuildwheel@v2.2.0a1
 
       - uses: actions/upload-artifact@v2
         with:
