install openblass on macos

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -54,6 +54,9 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
+      - if: runner.os == 'macOS'
+        run: brew install openblas
+
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.2.0a1
 
