--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,5 +45,5 @@ ignore = ["src/PartSegCore_compiled_backend/changelog.py", "src/PartSegCore_comp
 [tool.cibuildwheel]
 test-command = "pytest {project}/src/tests"
 test-extras = ["test"]
-skip = "cp36-*"
+skip = "cp36-* cp310*macos*"
 build = "*64"
