--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -20,26 +20,15 @@ jobs:
         fail-fast: false
         matrix:
           os: [windows-latest, macos-latest, ubuntu-latest]
+          python_version: ['3.7', '3.8', '3.9' , '3.10']
       steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-python@v2
-        name: Install Python 3.6
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v3
+        name: Install Python ${{ matrix.python_version }}
         with:
-          python-version: 3.6
-      - uses: actions/setup-python@v2
-        name: Install Python 3.7
-        with:
-          python-version: 3.7
-      - uses: actions/setup-python@v2
-        name: Install Python 3.8
-        with:
-          python-version: 3.8
-      - uses: actions/setup-python@v2
-        name: Install Python 3.9
-        with:
-          python-version: 3.9
+          python-version: ${{ matrix.python_version }}
       - name: Install tox
-        run: pip install tox numpy
+        run: pip install tox numpy tox-gh-actions
       - name: Test PartSeg
         run: tox
 
@@ -53,13 +42,15 @@ jobs:
         os: [ubuntu-18.04, windows-latest, macos-latest]
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - if: runner.os == 'macOS'
         run: brew install openblas
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.2.0a1
+        uses: pypa/cibuildwheel@v2.3.0
         env:
           OPENBLAS: "$(brew --prefix openblas)"
 
@@ -72,12 +63,14 @@ jobs:
     name: Build source distribution
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - uses: actions/setup-python@v2
         name: Install Python
         with:
-          python-version: '3.7'
+          python-version: '3.8'
 
       - name: Build sdist
         run: |
