--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   test:
-      name: Test on ${{ matrix.os }}
+      name: Test on ${{ matrix.os }} with Python ${{ matrix.python_version }}
       runs-on: ${{ matrix.os }}
       strategy:
         fail-fast: false
@@ -39,7 +39,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-18.04, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
       - uses: actions/checkout@v3
@@ -77,7 +77,7 @@ jobs:
           pip install numpy
           python setup.py sdist
 
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
           path: dist/*.tar.gz
 
