--- a/setup.cfg
+++ b/setup.cfg
@@ -15,10 +15,10 @@ classifiers =
     Operating System :: OS Independent
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
-    Programming Language :: Python :: 3.6
-    Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
     Programming Language :: Python :: Implementation :: CPython
     Topic :: Scientific/Engineering :: Bio-Informatics
 keywords = bioimaging
@@ -30,12 +30,12 @@ project_urls =
 packages = find:
 install_requires =
     numpy>=1.16.0
-python_requires = >=3.6
+python_requires = >=3.8
 package_dir =
     =src
 setup_requires =
     cython>=0.29.13
-    setuptools_scm[toml]>=3.4
+    setuptools-scm[toml]>=3.4
 tests_require =
     pytest
     pytest-cov
