--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,21 +1,21 @@
 default_language_version:
-    python: python3.7
+    python: python3.8
 
 repos:
 -   repo: https://github.com/python/black
-    rev: 21.9b0
+    rev: 22.12.0
     hooks:
     - id: black
       pass_filenames: true
--   repo: https://gitlab.com/pycqa/flake8
-    rev: 3.9.2
+-   repo: https://github.com/PyCQA/flake8
+    rev: 6.0.0
     hooks:
     - id: flake8
       pass_filenames: true
       # this seems to need to be here in addition to setup.cfg
       exclude: vendored|__init__.py|examples
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1
+    rev: v4.4.0
     hooks:
     - id: check-json
     - id: check-yaml
@@ -26,11 +26,12 @@ repos:
     - id: debug-statements
     - id: mixed-line-ending
 -   repo: https://github.com/asottile/setup-cfg-fmt
-    rev: v1.17.0
+    rev: v2.2.0
     hooks:
     - id: setup-cfg-fmt
+      args: ["--include-version-classifiers"]
 -   repo: https://github.com/asottile/pyupgrade
-    rev: v2.28.0
+    rev: v3.3.1
     hooks:
     - id: pyupgrade
 -   repo: https://github.com/pre-commit/pygrep-hooks
@@ -42,10 +43,10 @@ repos:
 #    hooks:
 #    -   id: seed-isort-config
 -   repo: https://github.com/pre-commit/mirrors-isort
-    rev: 'v5.9.3'  # Use the revision sha / tag you want to point at
+    rev: 'v5.10.1'  # Use the revision sha / tag you want to point at
     hooks:
     -   id: isort
 -   repo: https://github.com/markdownlint/markdownlint
-    rev: v0.11.0  # Use the ref you want to point at
+    rev: v0.12.0  # Use the ref you want to point at
     hooks:
     - id: markdownlint
