fix tox configuration

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,10 @@ python =
 
 [testenv]
 # passenv = DISPLAY XAUTHORITY
-passenv = GITHUB_ACTIONS AZURE_PIPELINES TRAVIS
+passenv =
+    GITHUB_ACTIONS
+    AZURE_PIPELINES
+    TRAVIS
 deps =
     setuptools_scm[toml]>=3.4
     numpy
