--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -14,16 +14,16 @@ on:
 
 jobs:
   test:
-      name: Test on ${{ matrix.os }}
+      name: Test on ${{ matrix.os }} with Python ${{ matrix.python_version }}
       runs-on: ${{ matrix.os }}
       strategy:
         fail-fast: false
         matrix:
           os: [windows-latest, macos-latest, ubuntu-latest]
-          python_version: ['3.7', '3.8', '3.9' , '3.10']
+          python_version: ['3.8', '3.9' , '3.10', '3.11']
       steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
+      - uses: actions/setup-python@v4
         name: Install Python ${{ matrix.python_version }}
         with:
           python-version: ${{ matrix.python_version }}
@@ -39,7 +39,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-18.04, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
       - uses: actions/checkout@v3
@@ -50,11 +50,11 @@ jobs:
         run: brew install openblas
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.3.0
+        uses: pypa/cibuildwheel@v2.11.4
         env:
           OPENBLAS: "$(brew --prefix openblas)"
 
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
           path: ./wheelhouse/*.whl
 
@@ -67,17 +67,17 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: actions/setup-python@v2
+      - uses: actions/setup-python@v4
         name: Install Python
         with:
-          python-version: '3.8'
+          python-version: '3.10'
 
       - name: Build sdist
         run: |
           pip install numpy
           python setup.py sdist
 
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
           path: dist/*.tar.gz
 
