--- a/tox.ini
+++ b/tox.ini
@@ -4,19 +4,22 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py36, py37, py38, py39, py310
+envlist = py38, py39, py310, py311
 
 [gh-actions]
 python =
-    3.7: py37
     3.8: py38
     3.9: py39
     3.10: py310
+    3.11: py311
 
 
 [testenv]
 # passenv = DISPLAY XAUTHORITY
-passenv = GITHUB_ACTIONS AZURE_PIPELINES TRAVIS
+passenv =
+    GITHUB_ACTIONS
+    AZURE_PIPELINES
+    TRAVIS
 deps =
     setuptools_scm[toml]>=3.4
     numpy
