try build libomp

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -5,6 +5,7 @@ on:
     branches-ignore:
       - 'release/**'
       - 'dependabot/**'
+      - 'feature/**'
     tags:
       - '*'
   pull_request:
