--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -32,7 +32,7 @@ jobs:
         run: brew install libomp
       - name: Install tox
         run: pip install tox numpy tox-gh-actions
-      - name: Test PartSeg
+      - name: Test Backend
         run: tox
 
   build_wheels:
