--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -34,6 +34,8 @@ jobs:
         run: pip install tox numpy tox-gh-actions
       - name: Test Backend
         run: tox
+        env:
+          OPENBLAS: "$(brew --prefix openblas)"
 
   build_wheels:
     needs: test
