--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,19 +1,15 @@
 default_language_version:
-    python: python3.8
+    python: python3.9
 
 repos:
--   repo: https://github.com/python/black
-    rev: 22.12.0
+-   repo: https://github.com/astral-sh/ruff-pre-commit
+    # Ruff version.
+    rev: v0.1.12
     hooks:
-    - id: black
-      pass_filenames: true
--   repo: https://github.com/PyCQA/flake8
-    rev: 6.0.0
-    hooks:
-    - id: flake8
-      pass_filenames: true
-      # this seems to need to be here in addition to setup.cfg
-      exclude: vendored|__init__.py|examples
+      # Run the linter.
+      - id: ruff
+      # Run the formatter.
+      - id: ruff-format
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
     hooks:
@@ -25,27 +21,10 @@ repos:
       exclude: .*\.md
     - id: debug-statements
     - id: mixed-line-ending
--   repo: https://github.com/asottile/setup-cfg-fmt
-    rev: v2.2.0
-    hooks:
-    - id: setup-cfg-fmt
-      args: ["--include-version-classifiers"]
--   repo: https://github.com/asottile/pyupgrade
-    rev: v3.3.1
-    hooks:
-    - id: pyupgrade
 -   repo: https://github.com/pre-commit/pygrep-hooks
     rev: v1.9.0
     hooks:
     -   id: rst-backticks
-#-   repo: https://github.com/asottile/seed-isort-config
-#    rev: v2.2.0
-#    hooks:
-#    -   id: seed-isort-config
--   repo: https://github.com/pre-commit/mirrors-isort
-    rev: 'v5.10.1'  # Use the revision sha / tag you want to point at
-    hooks:
-    -   id: isort
 -   repo: https://github.com/markdownlint/markdownlint
     rev: v0.12.0  # Use the ref you want to point at
     hooks:
