--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -28,11 +28,11 @@ jobs:
           python-version: ${{ matrix.python_version }}
       - name: install openbls
         if: runner.os == 'macOS'
-        run: brew install libomp gcc@13
+        run: brew install libomp
       - name: Install tox
         run: pip install tox numpy tox-gh-actions
       - name: Test Backend
-        run: OPENBLAS="$(brew --prefix openblas)" CC=gcc-13 CXX=g++-13 tox
+        run: OPENBLAS="$(brew --prefix openblas)" tox
         if: runner.os == 'macOS'
       - name: Test Backend
         run: tox
