remove obsolete check

--- a/tox.ini
+++ b/tox.ini
@@ -4,15 +4,14 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py38, py39, py310, py311
+envlist = py39, py310, py311, py312
 
 [gh-actions]
 python =
-    3.8: py38
     3.9: py39
     3.10: py310
     3.11: py311
-
+    3.12: py312
 
 [testenv]
 # passenv = DISPLAY XAUTHORITY
@@ -22,11 +21,17 @@ passenv =
     TRAVIS
     OPENBLAS
     OMP
+    SDKROOT
 deps =
     setuptools_scm[toml]>=3.4
     numpy
     pytest
     cython
 
+install_command =
+    python -I -m pip install {opts} {packages}
+
 commands =
+    echo aaaa
+    echo $OMP
     pytest
