fix tox configuration

--- a/tox.ini
+++ b/tox.ini
@@ -22,10 +22,9 @@ passenv =
     OPENBLAS
     OMP
     SDKROOT
+extras =
+    test
 deps =
-    setuptools_scm[toml]>=3.4
-    numpy
-    pytest
     cython
 
 commands =
