--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -85,7 +85,7 @@ jobs:
       - name: Build sdist
         run: |
           pip install build
-          python python -m build --sdist .
+          python -m build --sdist .
 
       - uses: actions/upload-artifact@v3
         with:
