Fix build sdist for proper publis process (#11)
* use `build` for build sdist

* Update .github/workflows/wheels.yml

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

---------

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -84,8 +84,8 @@ jobs:
 
       - name: Build sdist
         run: |
-          pip install numpy
-          python setup.py sdist
+          pip install build
+          python -m build --sdist .
 
       - uses: actions/upload-artifact@v3
         with:
