--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -24,12 +24,12 @@ jobs:
           os: [windows-latest, macos-latest, ubuntu-latest]
           python_version: ['3.9' , '3.10', '3.11', '3.12']
       steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions/setup-python@v4
         name: Install Python ${{ matrix.python_version }}
         with:
           python-version: ${{ matrix.python_version }}
-      - name: install openbls
+      - name: install openblas
         if: runner.os == 'macOS'
         run: brew install libomp
       - name: Install tox
@@ -52,7 +52,7 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
@@ -64,31 +64,26 @@ jobs:
         env:
           OPENBLAS: "$(brew --prefix openblas)"
 
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
           path: ./wheelhouse/*.whl
+          name: pypi-wheels-${{ matrix.os }}
 
   build_sdist:
     needs: test
     name: Build source distribution
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - uses: actions/setup-python@v4
-        name: Install Python
-        with:
-          python-version: '3.10'
-
       - name: Build sdist
-        run: |
-          pip install build
-          python -m build --sdist .
+        run: pipx run build --sdist
 
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
+          name: pypi-sdist
           path: dist/*.tar.gz
 
   upload_pypi:
@@ -104,10 +99,11 @@ jobs:
     # alternatively, to publish when a GitHub Release is created, use the following rule:
     # if: github.event_name == 'release' && github.event.action == 'published'
     steps:
-      - uses: actions/download-artifact@v3
+      - uses: actions/download-artifact@v4
         with:
-          name: artifact
+          pattern: pypi-*
           path: dist
+          merge-multiple: true
 
       - name: Publish distribution 📦 to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
