--- a/pyproject.toml
+++ b/pyproject.toml
@@ -116,7 +116,10 @@ skip = "pp*macos* pp31*"
 build = "*64"
 
 [tool.cibuildwheel.macos]
-before-all = "sudo bash {project}/build_utils/build_libomp.sh"
+before-all = [
+    "set",
+    "sudo bash {project}/build_utils/build_libomp.sh",
+]
 
 
 [tool.ruff]
