--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,8 +35,8 @@ repos:
     - id: codespell
       additional_dependencies:
       - tomli
--   repo: https://github.com/cpp-linter/cpp-linter-hooks
-    rev: v0.5.1  # Use the ref you want to point at
+-   repo: https://github.com/pre-commit/mirrors-clang-format
+    rev: v19.1.0  # Use the sha / tag you want to point at
     hooks:
-      - id: clang-format
-        args: [--style=Google] # Other coding style: LLVM, GNU, Chromium, Microsoft, Mozilla, WebKit.
+    - id: clang-format
+      args: ["-style=Google"]
