--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,3 +35,9 @@ repos:
     - id: codespell
       additional_dependencies:
       - tomli
+-   repo: https://github.com/pre-commit/mirrors-clang-format
+    rev: v19.1.0  # Use the sha / tag you want to point at
+    hooks:
+    - id: clang-format
+      args: ["-style=Google"]
+      exclude: ^notebooks/
