--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,15 @@
 [build-system]
 # Minimum requirements for the build system to execute.
-requires = ["setuptools>=70.0.0", "Cython", "numpy>=2", "setuptools_scm[toml]>=8.1"]  # PEP 508 specifications.
-build-backend = "setuptools.build_meta"
+requires = ["scikit-build-core", "Cython", "cython-cmake", "numpy>=2", "setuptools_scm[toml]>=8.1"]  # PEP 508 specifications.
+build-backend = "scikit_build_core.build"
+
+[tool.scikit-build]
+metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
+sdist.include = ["src/PartSegCore_compiled_backend/version.py"]
+cmake.version = ">=3.21"
+sdist.exclude = [".github", "tox.ini", "build_utils", "notebooks", ".readthedocs.yaml"]
+wheel.exclude = ["**.pyx"]
+
 
 [project]
 name = "PartSegCore_compiled_backend"
