fix configuration and fix code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,23 +33,39 @@ execute_process(
 
 
 cython_transpile(src/PartSegCore_compiled_backend/sprawl_utils/euclidean_cython.pyx LANGUAGE CXX OUTPUT_VARIABLE euclidean_cython_cxx)
-python_add_library(euclidean_cython MODULE "${euclidean_cython_cxx}" WITH_SOABI)
+python_add_library(euclidean_cython MODULE
+        "${euclidean_cython_cxx}"
+        src/PartSegCore_compiled_backend/sprawl_utils/my_queue.h
+        src/PartSegCore_compiled_backend/sprawl_utils/global_consts.h
+        WITH_SOABI)
 target_include_directories(euclidean_cython PRIVATE "${NUMPY_INCLUDE_DIR}")
 target_include_directories(euclidean_cython PRIVATE src/PartSegCore_compiled_backend/sprawl_utils/)
 
 cython_transpile(src/PartSegCore_compiled_backend/sprawl_utils/path_sprawl_cython.pyx LANGUAGE CXX OUTPUT_VARIABLE path_sprawl_cython_cxx)
-python_add_library(path_sprawl_cython MODULE "${path_sprawl_cython_cxx}" WITH_SOABI)
+python_add_library(path_sprawl_cython MODULE
+        "${path_sprawl_cython_cxx}"
+        src/PartSegCore_compiled_backend/sprawl_utils/my_queue.h
+        src/PartSegCore_compiled_backend/sprawl_utils/global_consts.h
+        WITH_SOABI)
 target_include_directories(path_sprawl_cython PRIVATE "${NUMPY_INCLUDE_DIR}")
 target_include_directories(path_sprawl_cython PRIVATE src/PartSegCore_compiled_backend/sprawl_utils/)
 
 cython_transpile(src/PartSegCore_compiled_backend/sprawl_utils/sprawl_utils.pyx LANGUAGE CXX OUTPUT_VARIABLE sprawl_utils_cython_cxx)
-python_add_library(sprawl_utils_cython MODULE "${sprawl_utils_cython_cxx}" WITH_SOABI)
+python_add_library(sprawl_utils_cython MODULE
+        "${sprawl_utils_cython_cxx}"
+        src/PartSegCore_compiled_backend/sprawl_utils/my_queue.h
+        src/PartSegCore_compiled_backend/sprawl_utils/global_consts.h
+        WITH_SOABI)
 target_include_directories(sprawl_utils_cython PRIVATE "${NUMPY_INCLUDE_DIR}")
 target_include_directories(sprawl_utils_cython PRIVATE src/PartSegCore_compiled_backend/sprawl_utils/)
 
 
 cython_transpile(src/PartSegCore_compiled_backend/sprawl_utils/fuzzy_distance.pyx LANGUAGE CXX OUTPUT_VARIABLE fuzzy_distance_cython_cxx)
-python_add_library(fuzzy_distance_cython MODULE "${fuzzy_distance_cython_cxx}" WITH_SOABI)
+python_add_library(fuzzy_distance_cython MODULE
+        "${fuzzy_distance_cython_cxx}"
+        src/PartSegCore_compiled_backend/sprawl_utils/my_queue.h
+        src/PartSegCore_compiled_backend/sprawl_utils/global_consts.h
+        WITH_SOABI)
 target_include_directories(fuzzy_distance_cython PRIVATE "${NUMPY_INCLUDE_DIR}")
 target_include_directories(fuzzy_distance_cython PRIVATE src/PartSegCore_compiled_backend/sprawl_utils/)
 
@@ -65,7 +81,11 @@ target_include_directories(calc_bounds PRIVATE "${NUMPY_INCLUDE_DIR}")
 
 
 cython_transpile(src/PartSegCore_compiled_backend/multiscale_opening/mso_bind.pyx LANGUAGE CXX OUTPUT_VARIABLE mso_bind_cython_cxx)
-python_add_library(mso_bind MODULE "${mso_bind_cython_cxx}" WITH_SOABI)
+python_add_library(mso_bind MODULE
+        "${mso_bind_cython_cxx}"
+        src/PartSegCore_compiled_backend/multiscale_opening/mso.h
+        src/PartSegCore_compiled_backend/multiscale_opening/my_queue.h
+        WITH_SOABI)
 target_include_directories(mso_bind PRIVATE src/PartSegCore_compiled_backend/multiscale_opening/)
 target_include_directories(mso_bind PRIVATE "${NUMPY_INCLUDE_DIR}")
 
@@ -82,7 +102,7 @@ target_include_directories(_napari_mapping PRIVATE "${NUMPY_INCLUDE_DIR}")
 target_link_libraries(_napari_mapping PRIVATE OpenMP::OpenMP_CXX)
 
 cython_transpile(src/PartSegCore_compiled_backend/triangulate.pyx LANGUAGE CXX OUTPUT_VARIABLE triangulate_cython_cxx)
-python_add_library(triangulate MODULE "${triangulate_cython_cxx}" WITH_SOABI)
+python_add_library(triangulate MODULE "${triangulate_cython_cxx}" src/PartSegCore_compiled_backend/triangulate.hpp WITH_SOABI)
 target_include_directories(triangulate PRIVATE "${NUMPY_INCLUDE_DIR}")
 target_include_directories(triangulate PRIVATE src/PartSegCore_compiled_backend/)
 
