Fix finding intersections

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ sdist.include = ["src/PartSegCore_compiled_backend/version.py"]
 cmake.version = ">=3.21"
 sdist.exclude = [".github", "tox.ini", "build_utils", "notebooks", ".readthedocs.yaml"]
 wheel.exclude = ["**.pyx"]
+cmake.build-type = "Debug"
 
 
 [project]
