--- a/pyproject.toml
+++ b/pyproject.toml
@@ -140,7 +140,8 @@ quote-style = "single"
 indent-style = "space"
 docstring-code-format = true
 line-ending = "lf"
-skip-magic-trailing-comma = true
+skip-magic-trailing-comma = false
+
 
 [tool.ruff.lint]
 select = [
