add problematic test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,9 @@ cmake_minimum_required(VERSION 3.21)
 project(${SKBUILD_PROJECT_NAME} LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS_DEBUG_INIT "-DDEBUG")
+set(CMAKE_CXX_FLAGS_DEBUG_INIT "-DDEBUG -g")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -DDEBUG")
+
 
 # Define compiler directive
 add_definitions(-DNPY_NO_DEPRECATED_API=NPY_1_7_API_VERSION)
