Add performant triangulation for napari shapes (#36)
* fix annotation warnings

* add code for finding edge intersection

* initial implementation for convex polygons

* move part of conde to c++

* avoid name collision

* fix bug in code

* rewrtte finding intersection to c++

* rewrite is_convex

* rewrite triangle convex polygon

* simplify code

* clang-format

* split functions and define helper functions

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* start implementing sweeping line triangulation

* implementation part 2

* reformat file

* describe steeps

* improve code structure

* fix type annotation

* add triangulate to install targets

* fix configuration and fix code

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* fix warning in code

* next style fixes

* refactor code for better readability

* clarify code

* Fix finding intersections

* udpate docstrings

* add comparator for left to righe edges order, start fixing finding intersections

* comment out debug build

* move between computers

* fixing intersection part 2

* use simple workaround for intersection edge case

* fix addin intersection points to polygon

* add monotone polygon triangulation

* polygon split initial

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* initial implementation of sweeping line triangulation

* fix orientation of triangles

* use c++ code for triangulation

* more verbose test run

* fix checking of point dupplication

* Fix basic bugs

* first test for triangulation

* add basic test and fix left-right detection

* add intersection points

* fix point repetition bugs

* add problematic test

* fix macos specific bug

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* fix intersection for colinear points

* try fix linux compilation f

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ sdist.include = ["src/PartSegCore_compiled_backend/version.py"]
 cmake.version = ">=3.21"
 sdist.exclude = [".github", "tox.ini", "build_utils", "notebooks", ".readthedocs.yaml"]
 wheel.exclude = ["**.pyx"]
+#cmake.build-type = "Debug"
 
 
 [project]
@@ -139,7 +140,8 @@ quote-style = "single"
 indent-style = "space"
 docstring-code-format = true
 line-ending = "lf"
-skip-magic-trailing-comma = true
+skip-magic-trailing-comma = false
+
 
 [tool.ruff.lint]
 select = [
