--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -22,7 +22,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ windows-latest, macos-latest, ubuntu-latest ]
-        python_version: [ '3.9' , '3.10', '3.11', '3.12' ]
+        python_version: [ '3.9', '3.13', '3.14' ]
     steps:
       - uses: actions/checkout@v5
       - uses: actions/setup-python@v5
@@ -63,7 +63,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-latest, windows-latest, macos-latest, macos-13 ]
+        os: [ ubuntu-latest, ubuntu-24.04-arm, windows-latest, macos-latest, macos-13 ]
 
     steps:
       - uses: actions/checkout@v5
