--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py39, py310, py311, py312
+envlist = py39, py310, py311, py312, py313, py314
 
 [gh-actions]
 python =
@@ -12,6 +12,8 @@ python =
     3.10: py310
     3.11: py311
     3.12: py312
+    3.13: py313
+    3.14: py314
 
 [testenv]
 # passenv = DISPLAY XAUTHORITY
